form elements aligned and button added

--- a/Root/Sign-upForm/test/index2.html
+++ b/Root/Sign-upForm/test/index2.html
@@ -16,10 +16,20 @@
         </div>
         
         <div class="right">
-            <header>This is a header</header>
+            <header>
+                <h1>This isn't a real online space!</h1>
+                <div>
+                    <p>It's part of the odin project.</p><br>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos blanditiis optio assumenda ullam facere corrupti officia vitae odit iusto ducimus. Quasi dolorem vero pariatur nobis dolores nisi accusantium soluta perspiciatis.</p>
+                    <p>Porro adipisci quis quasi nisi ratione repellendus? Suscipit ut aliquid, commodi dicta soluta rerum dolorum dolores sequi eum facere, odit adipisci, placeat consectetur aspernatur quasi perspiciatis voluptas distinctio expedita quae.</p>
+                    <p>Laboriosam vero, deserunt sint facilis maxime voluptates eius ipsa officiis, aut commodi iure blanditiis quo non et minus alias ut placeat magni vel fugit repellendus minima doloribus nam. Maxime, ratione.</p>
+                    <p>Ex dignissimos, repellat iusto recusandae reprehenderit labore dolor maxime commodi cum nihil molestias velit ducimus natus. Ab dolore natus obcaecati, repellendus autem excepturi illum, facilis architecto nisi neque, animi voluptatem!</p>
+                </div>
+            </header>
+
             <section>
-                <form action="/stuff" method="get">
-                    Form goes here
+                <h2>Sign up today!</h2>
+                <form action="/stuff" method="get" id="gearForm">
 
                     <div class="formElement">
                         <label for="firstName">First Name:</label><br>
@@ -51,8 +61,8 @@
                         <label for="firstName">Confirm Password:</label><br>
                         <input type="text" name="cPassword" id="cPassword">
                     </div>
-
                 </form>
+                <button type="submit" form="gearForm" value="Submit">Buttan</button>
             </section>
         </div>
     </div>
