adjusted gear to make it off-center

--- a/Root/Sign-upForm/test/index2.html
+++ b/Root/Sign-upForm/test/index2.html
@@ -12,6 +12,7 @@
             <section id="splash">    
                 The Gears Have Begun
                 <img src="./gear.png" alt="">
+                <h1>Turning</h1>
             </section>
         </div>
         
